# yt-dl-subtitle-exec

./: README.md  cli.py  pyproject.toml  yt-dl-subtitle.spec
.github/workflows/: build.yml  release.yml
utils/: constant.py  utils.py
youtube/: __init__.py  yt_metadata_dl.py  yt_subtitle_dl.py
